Fix Icons not showing and add margin on title post

--- a/src/components/posts/PostCard.css
+++ b/src/components/posts/PostCard.css
@@ -24,12 +24,25 @@
   color: #6b6b6b;
   font-size: 14px;
 }
+.post__card-body > p {
+  margin-top: 7px;
+}
+ 
+.post__card-body-group{
+  display: flex;
+  align-items: center;
+}
 
+.post__card-body-group svg{
+  width:16px;
+  height: 16px;
+}
 
 .post__card-body__time {
   font-size: 11px;
   font-weight: normal;
   color: #767676;
+  margin-left: 8px;
 }
 
 .post__card-icon {
